--- a/NOTES_a_messages_extension MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/NOTES_a_messages_extension MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -85,30 +85,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTt-h0-Oyf">
-                                <rect key="frame" x="242" y="20" width="57" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Send"/>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Note Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xUz-yt-0q4">
-                                <rect key="frame" x="16" y="20" width="218" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Note Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xUz-yt-0q4">
+                                <rect key="frame" x="16" y="36" width="211" height="26"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Note" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZNq-Qu-WcL">
-                                <rect key="frame" x="16" y="58" width="288" height="450"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" scrollEnabled="NO" text="Note" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZNq-Qu-WcL">
+                                <rect key="frame" x="16" y="78" width="288" height="434"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTt-h0-Oyf">
+                                <rect key="frame" x="243" y="36" width="53" height="30"/>
+                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="61" id="WAS-vP-uyv"/>
+                                </constraints>
+                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Send"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cTt-h0-Oyf" firstAttribute="leading" secondItem="xUz-yt-0q4" secondAttribute="trailing" constant="16" id="8NI-0w-5SJ"/>
+                            <constraint firstItem="oJt-z3-fmy" firstAttribute="trailing" secondItem="cTt-h0-Oyf" secondAttribute="trailing" constant="16" id="AjQ-b3-gmJ"/>
+                            <constraint firstItem="xUz-yt-0q4" firstAttribute="leading" secondItem="oJt-z3-fmy" secondAttribute="leading" constant="16" id="BNr-Dn-n9j"/>
+                            <constraint firstItem="oJt-z3-fmy" firstAttribute="trailing" secondItem="cTt-h0-Oyf" secondAttribute="trailing" constant="16" id="El1-ZM-avF"/>
+                            <constraint firstItem="oJt-z3-fmy" firstAttribute="bottom" secondItem="ZNq-Qu-WcL" secondAttribute="bottom" constant="16" id="GEE-F4-mq9"/>
+                            <constraint firstItem="xUz-yt-0q4" firstAttribute="top" secondItem="oJt-z3-fmy" secondAttribute="top" constant="16" id="ONh-xS-HjL"/>
+                            <constraint firstItem="cTt-h0-Oyf" firstAttribute="top" secondItem="oJt-z3-fmy" secondAttribute="top" constant="16" id="a5c-yF-Ubd"/>
+                            <constraint firstItem="ZNq-Qu-WcL" firstAttribute="leading" secondItem="oJt-z3-fmy" secondAttribute="leading" constant="16" id="fBI-K7-fCj"/>
+                            <constraint firstItem="oJt-z3-fmy" firstAttribute="trailing" secondItem="ZNq-Qu-WcL" secondAttribute="trailing" constant="16" id="fTL-e0-9LD"/>
+                            <constraint firstItem="cTt-h0-Oyf" firstAttribute="top" secondItem="oJt-z3-fmy" secondAttribute="top" constant="16" id="fjY-8y-dpw"/>
+                            <constraint firstItem="ZNq-Qu-WcL" firstAttribute="top" secondItem="xUz-yt-0q4" secondAttribute="bottom" constant="16" id="wOU-q8-aQf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="oJt-z3-fmy"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
